--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.1.3",
     "axios": "^0.19.2",
     "gh-pages": "^2.2.0",
     "mapbox-gl": "^1.9.1",
@@ -14,7 +15,7 @@
     "react-mapbox-gl": "^4.8.3",
     "react-scripts": "3.4.1"
   },
-  "homepage": "https://shresthabikash.github.io/covid19-map-visualization",
+  "homepage": "https://shrestha-bikash.github.io/covid19-map-visualization",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
